--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Deepak Nishad # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: My Portofolio # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://dnisha.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: dnisha # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: Dnishad158 # change to your twitter username
 
 social:
   # Change to your full name.
@@ -76,8 +76,7 @@ theme_mode: # [light | dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
-
+avatar: https://pbs.twimg.com/profile_images/1667212617419505695/0H8Dut0l_400x400.jpg
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
 social_preview_image: # string, local or CORS resources
